@@ -1,0 +1,4 @@
+@NonnullDefault
+package zeroneye.powah.compat.curios;
+
+import org.lwjgl.system.NonnullDefault;
