@@ -15,7 +15,7 @@ Various ways to generate, store and transmit FE power .
 [[dependencies.powah]]
     modId="lollipop"
     mandatory=true
-    versionRange="[0.0.12,)"
+    versionRange="[0.0.13,)"
     ordering="NONE"
     side="BOTH"
 
